--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script data-cfasync="false" type="text/javascript"
-    src="form-submission-handler.js"></script>
+    <script data-cfasync="false" type="text/javascript" src="../form-submission-handler.js"></script>
   </body>
 </html>
