--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript" src="../form-submission-handler.js"></script>
+    <script type="text/javascript" src="./form-submission-handler.js"></script>
   </body>
 </html>
