--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="Jenna Rajani, Front End Web Developer, Software Developer, Web Developer">
+    <meta name="description" content="Jenna Rajani - Web Developer. Websites, web applications, buisiness solutions.">
+    <meta name="keywords" content="Jenna Rajani, Frontend, Web Developer, Software Developer, Frontend Developer, Fullstack Developer">
     <meta name="author" content="Jenna Rajani, Web Developer, jjrajani.github.io">
     <!--
       manifest.json provides metadata used when your web app is added to the
